--- a/resume.css
+++ b/resume.css
@@ -77,3 +77,15 @@ body {
     border-bottom: 0;
   }
 }
+
+#experience-overview {
+  padding: 30px 0;
+}
+#experience-professional {
+  padding: 30px 0;
+}
+
+.content-header {
+ text-transform: uppercase;
+  font-weight: 800;
+}
