--- a/resume.css
+++ b/resume.css
@@ -80,12 +80,13 @@ body {
 
 #experience-overview {
   padding: 30px 0;
+  background: #f5f6f7;
 }
 #experience-professional {
   padding: 30px 0;
 }
 
-.content-header {
+.content-header h1 {
  text-transform: uppercase;
   font-weight: 800;
 }
