--- a/resume.css
+++ b/resume.css
@@ -90,3 +90,15 @@ body {
  text-transform: uppercase;
   font-weight: 800;
 }
+
+.date {
+  float: right;
+}
+
+.jumbotron {
+    background: url("mohamedresumeheader.jpg") repeat scroll center center / cover;
+    padding-top: 50px;
+    padding-bottom: 50px;
+    margin-top: -20px;
+    height: 400px;
+}
