--- a/resume.css
+++ b/resume.css
@@ -79,11 +79,12 @@ body {
 }
 
 #experience-overview {
-  padding: 30px 0;
-  background: #f5f6f7;
+    padding: 30px;
+    background: #f5f6f7;
 }
 #experience-professional {
-  padding: 30px 0;
+    padding: 30px;
+    background: #f5f67f;
 }
 
 .content-header h1 {
@@ -101,4 +102,12 @@ body {
     padding-bottom: 50px;
     margin-top: -20px;
     height: 400px;
+}
+
+
+h1 {
+    margin: .67em 0;
+    font-size: 2em;
+    text-transform: uppercase;
+    font-weight: 900 !important;
 }
