--- a/resume.css
+++ b/resume.css
@@ -120,5 +120,9 @@ h1 {
 
 .hr {
   padding: 15px 0;
-  border: 1px solid #333;
+  border: 1px solid #f5f6f7;
+}
+
+.footer {
+  border: 0px !important;
 }
