--- a/resume.css
+++ b/resume.css
@@ -112,7 +112,7 @@ h1 {
     font-weight: 900 !important;
 }
 
-.intro {
+.jumbotronintro {
     background: #f5f67f !important;
   width: 50%;
   padding: 30px;
