--- a/resume.css
+++ b/resume.css
@@ -112,10 +112,10 @@ h1 {
     font-weight: 900 !important;
 }
 
-.jumbotronintro {
+#jumbotronintro {
     background: #f5f67f !important;
-  width: 50%;
   padding: 30px;
+  bottom: 0 !important;
 }
 
 .hr {
