--- a/resume.css
+++ b/resume.css
@@ -126,3 +126,18 @@ h1 {
 .footer {
   border: 0px !important;
 }
+
+.lead {
+    margin-bottom: 20px;
+    font-size: 1.35em;
+    font-weight: 300;
+    line-height: 1.4;
+    color: #333;
+}
+h1 {
+    margin: .67em 0;
+    font-size: 2.3em;
+    text-transform: uppercase;
+    font-weight: 900 !important;
+    color: #111;
+}
